--- a/src/volume/front/src/pages/Game/Game.css
+++ b/src/volume/front/src/pages/Game/Game.css
@@ -9,9 +9,13 @@
 }
 
 .game__body {
-  background: grey;
-  width: 720px;
-  height: 420px;
+  background: rgb(0, 0, 0);
+  --width : 600px;
+  width: var(--width);
+  height: calc(30px +  400px + 100px );
+  aspect-ratio: 1.5;
+  border-radius: 10px;
+  border: 0.5px solid white;
   position: relative; 
 }
 
@@ -20,8 +24,8 @@
   --top_padding: 10px;
   position: absolute;
   border: none;
-  top : var(--top_padding);
-  left: var(--left_padding);
+  top : 30px;
+  left : 0;
 }
 
 .game__footer {
