--- a/src/volume/front/src/pages/Game/Game.css
+++ b/src/volume/front/src/pages/Game/Game.css
@@ -1,37 +1,28 @@
 
-
-.game__header {
-  background: white;
-  color: black;
-  width: 80vw;
-  margin-bottom: 20px;
-  height: 40px;
-}
-
 .game__body {
-  background: rgb(0, 0, 0);
-  --width : 600px;
+  background: wheat;
+  --width : 60vw;
+  --height : calc(var(--width)*(2/3) + 8vw);
   width: var(--width);
-  height: calc(30px +  400px + 100px );
-  aspect-ratio: 1.5;
-  border-radius: 10px;
-  border: 0.5px solid white;
+  height: var(--height);
+  /* aspect-ratio: 1.5; */
+  border-radius: 3vw;
   position: relative; 
 }
 
 .game__body canvas {
-  --left_padding: 10px;
-  --top_padding: 10px;
   position: absolute;
   border: none;
-  top : 30px;
+  /* background: blanchedalmond; */
+  width: 60vw;;
+  height: 40vw;
+  /* height: 100%; */
+  top : 4vw;
   left : 0;
 }
 
-.game__footer {
-  background: white;
-  color: black;
-  width: 80vw;
-  margin-top: 20px;
-  height: 40px;
+.game_score {
+  position: absolute;
+  top: 50%;
+  left: 0;
 }
