--- a/src/volume/front/src/index.css
+++ b/src/volume/front/src/index.css
@@ -2,20 +2,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  width: 100vw;
-  height: 100vh;
-  background: rgb(0, 24, 8);
-  color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    margin: 0px;
+    padding: 0px;
+    background: pink;
 }
 
 :root {
