--- a/src/volume/front/src/App.css
+++ b/src/volume/front/src/App.css
@@ -1,7 +1,9 @@
 .App {
   width: 100vw;
   height: 100vh;
-  background: rgb(2, 31, 13);
+  --bg-darkgreen : rgb(0, 30, 10);
+  /* background: rgb(2, 31, 13); */
+  background: black;
 
   display: flex;
   flex-direction: column;
